there's a usable language!

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<script async src="time.js"></script>
+        <script type="module">
+            import * as lang from './lang.js';
+            window.lang = lang;
+        </script>
 	</head>
 </html>
