--- a/index.html
+++ b/index.html
@@ -10,22 +10,32 @@
             const eval_button = document.getElementById('eval');
             const output = document.getElementById('output');
 
+            function log(text, symbol='>') {
+                output.textContent += text.split('\n').map((x,i)=>`${i==0 ? symbol : ' '} ${x}`).join('\n')+'\n'
+            }
+
             eval_button.addEventListener('click',function() {
                 console.clear();
                 const code = input.value;
                 console.log(`code: ${code}`);
+                log(code);
                 try {
                     const expr = lang.parser.parse(code);
                     console.log('expr:',expr);
                     const res = expr.evaluate();
-                    console.log(`result:`,res);
-                    output.textContent += `* ${res}\n`;
+                    log(res instanceof Array ? res.join('\n') : res.toString(), '*');
+                    window.res = res;
                 } catch(e) {
                     output.textContent +=`ERROR: ${e.message}\n`;
                     console.error(e);
                 }
             });
         </script>
+        <style>
+            #expr {
+                width: 100%;
+            }
+        </style>
 	</head>
     <body>
         <textarea id="expr"></textarea>
